# recallos

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  REBUILD_PLAN.md  generate_assets.py  pyproject.toml  recallos.landing-page-plan_BUILD.md  recallos_desktop.spec
00_RecallOS_desktop_app_plan/: RecallOS_desktop_app_plan.docx
01_all_md_files/: CHANGELOG.md  CONTRIBUTING.md  ReCallOS.features.readme.md  ReCallOS.user-benefits.readme.md  RecallOS_desktop_app_plan.md  recallos.landing-page-plan_BUILD.md  recallos.landing-page-plan_chatgpt.md  recallos.web.gui.build.md
desktop/: __init__.py  app.py  auth.py  crash.py  db.py  security.py  server.py  tray.py
examples/: basic_ingest.py  convo_import.py  mcp_setup.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
hooks/: README.md  recallos_precompact_hook.sh  recallos_save_hook.sh
packaging/: common.py
recallos/: __init__.py  __main__.py  agent_log.py  bootstrap.py  cli.py  config.py  conversation_ingest.py  diagnostics.py  entity_detector.py  entity_registry.py  exceptions.py  extractors.py  ingest_engine.py  mcp_gateway.py  memory_layers.py  migration.py  node_detector_local.py  normalize.py  recall_graph.py  recallscript.py  retrieval_engine.py  spellcheck.py  transcript_splitter.py  vault_graph.py
scripts/: build.py  build_exe.py  check_no_external_assets.py  check_recallos_health.py  export_warp_convos.py  inspect_warp_db.py  recallos_profile_startup_hook.ps1  sample_warp_row.py  test_mcp_stdio.py
site/: .htaccess  benefits.html  index.html  robots.txt  sitemap.xml
tests/: test_agent_log.py  test_api_readiness.py  test_config.py  test_convo_miner.py  (+19 more)
(+56 files in other folders)
