[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "recallos"
version = "4.0.0"
description = "RecallOS — Local-first AI memory operating system. No API key required."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "powerproweb"},
]
keywords = [
    "ai", "memory", "llm", "rag", "chromadb", "mcp",
    "recallos", "recall-os", "memory-os", "agent-memory",
    "vector-database", "claude", "chatgpt", "embeddings",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "chromadb>=0.4.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/powerproweb/recallos"
Repository = "https://github.com/powerproweb/recallos"
"Bug Tracker" = "https://github.com/powerproweb/recallos/issues"

[tool.setuptools.packages.find]
include = ["recallos*"]

[project.scripts]
recallos = "recallos:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.6.0", "build>=1.0", "twine>=4.0"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
